- refactored code to make text completion a generic utility - implemented async for run task - integrate mlflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ name = "aibackends"
 version = "0.1.0"
 description = "AI backends library"
 dependencies = [
+    "pytest-asyncio",
+    "mlflow>=3.1"
 ]
